<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Orientation">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp">

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_details"
            android:layout_marginLeft="25dp"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/taskTitleTextView"
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_title_placeholder"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/dateTextView"
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_placeholder"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/timeTextView"
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_placeholder"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/locationTextView"
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_placeholder"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/personTextView"
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_placeholder"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/contactTextView"
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_placeholder"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

    </LinearLayout>


</LinearLayout>



