<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingLeft="20dp"
    tools:context=".activity.MainActivity"
    android:id="@+id/appbg">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/hello"
           android:layout_weight="1"
           android:id="@+id/star"
           android:layout_marginTop="20dp"
           android:textColor="@color/colorAccent"
           android:textSize="20sp"/>

        <ImageView
            android:id="@+id/flag2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right|bottom"
            android:background="@drawable/france" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_gravity="right|bottom"
            android:background="@drawable/white" />
        <ImageView
            android:id="@+id/flag"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="right|bottom"
            android:background="@drawable/eng" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_gravity="right|bottom"
            android:background="@drawable/white" />

        <ImageView
            android:id="@+id/paint"
            android:layout_width="29dp"
            android:layout_height="30dp"
            android:layout_gravity="right|bottom"
            android:background="@drawable/paint" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_gravity="right|bottom"
            android:background="@drawable/white" />
        <ImageView
            android:id="@+id/mic"
            android:layout_width="29dp"
            android:layout_height="30dp"
            android:layout_gravity="right|bottom"
            android:background="@drawable/mute" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_gravity="right|bottom"
            android:background="@drawable/white" />

        <ImageView
            android:id="@+id/calendar"
            android:layout_width="29dp"
            android:layout_height="30dp"
            android:layout_gravity="right|bottom"
            android:background="@drawable/calendar" />
    </LinearLayout>


   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/allmeetings"
       fontPath="fonts/nunito_extra_bold.ttf"
       android:textStyle="bold"
       android:textColor="@color/colorAccent"
       android:textSize="28sp"
       tools:ignore="MissingPrefix" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/noDataImage"
                android:layout_gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/taskRecycler"/>

        </FrameLayout>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="70dp"
       android:text="@string/createmeetings"
       android:drawablePadding="10dp"
       android:paddingTop="10dp"
       android:id="@+id/addTask"
       android:layout_gravity="center"
       android:textColor="@color/colorAccent"
       android:textSize="20sp"
       android:drawableLeft="@drawable/ic_add_black_24dp"
       android:textAlignment="center"
       android:layout_weight="0.5"
       android:layout_marginBottom="20dp"/>

    </LinearLayout>

</LinearLayout>